--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
+    "btoa": "^1.2.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.0"
   }
 }
