--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "btoa": "^1.2.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "nodemon": "^1.19.0",
     "path": "^0.12.7",
     "request": "^2.88.0"
   }
