--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "btoa": "^1.2.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "mustache": "^3.0.1",
     "nodemon": "^1.19.0",
     "path": "^0.12.7",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "xml2js": "^0.4.19"
   }
 }
