--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "btoa": "^1.2.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "heroku": "^7.24.3",
     "mustache": "^3.0.1",
     "nodemon": "^1.19.0",
     "path": "^0.12.7",
